# wildlandfire.esm

./: DOLT_REMOTE.md  README.md  manifest  pyproject.toml
archive/: camp_fire_model.jl
simulations/: __init__.py  camp_fire.esm  run_camp_fire.py  run_camp_fire_e2e.py
simulations/validation/: __init__.py  __main__.py  data.py  harness.py  metrics.py  report.py
tests/: test_data.py  test_harness.py  test_metrics.py  test_netcdf_io.py  test_report.py  test_run_camp_fire_e2e.py
